  * New upstream release 460 series.
    - Added support for the following GPUs: GeForce RTX 3070 Ti, CMP 50HX.
  * New upstream release 390 series.
    - Worked around a bug in Meson builds of libglvnd 1.3.0 that caused the
      nvidia_icd.json file to be installed in the wrong location.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Update symbols files.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Jun 2021 22:40:30 +0200

nvidia-graphics-drivers (465.31-1) experimental; urgency=medium

  * New upstream new feature branch release 465.31 (2021-05-18).

  [ Andreas Beckmann ]
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 22 May 2021 21:33:47 +0200

nvidia-graphics-drivers (465.27-1) experimental; urgency=medium

  * New upstream new feature branch release 465.27 (2021-04-29).

  [ Andreas Beckmann ]
  * libcuda1: Add Provides: libcuda-11.3-1{,-i386}.
  * Build the nvidia-peermem kernel module.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 04 May 2021 20:37:18 +0200

nvidia-graphics-drivers (465.24.02-1) experimental; urgency=medium

  * New upstream new feature branch release 465.24.02 (2021-04-14).
    * Fixed CVE-2021-1076, CVE-2021-1077.  (Closes: #987216)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5172
  * New upstream beta 465.19.01 (2021-03-30).
    - Added gsp.bin firmware file which is used to offload the GPU initialization
      and management tasks on some GPUs. See the "GSP Firmware" chapter in the
      README for more information.
    - Improved X11 DrawText() performance when rendering stippled text.
    - Fixed a bug that could prevent some hardware configurations with large
      numbers of displays connected to the same GPU from working correctly.
    - Fixed a bug that could cause multi-threaded GLX applications to hang
      while attempting to handle an XError.
    - Fixed a potential crash in the Vulkan driver when clearing images with
      multiple layers.