@@ -1,0 +1,1 @@
+libnvidia-nvvm.so.4.0.0		#LIBDIR#/#PRIVATE#/
